added title with caption, headers, and S tier

--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
       <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!-- Add a table element -->
-    <!-- Add a caption -->
-    <!-- Add a table head. Inside create a table row. Inside create four table headings with a scope of col. Leave the first one blank. Give the final 3 text. -->
-    
+    <table>
+      <caption>All Rides and Shows at Universal Florida's <i>Epic Universe</i> Ranked</caption>
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Attraction 1</th>
+          <th scope="col">Attraction 2</th>
+          <th scope="col">Attraction 3</th>
+        </tr>
+      </thead>
+    </table>
+    <tbody>
+      <tr>
+        <th scope="row" class="s">S</th>
+        <td>
+          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="610" height="450"/>
+        </td>
+        <td>
+          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="610" height="450"/>
+        </td>
+        <td>
+          <img src="monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="610" height="450"/>
+        </td>
+      </tr>
+    </tbody>
     <!-- Add a table body. -->
     <!-- Inside tbody create 6 table rows -->
     <!-- Give each row a th with scope of row and an id. Text is S,A,B,C,D,F -->
