adjusted size of pictures, added rows B-F, and added pictures for A and F

--- a/index.html
+++ b/index.html
@@ -19,21 +19,40 @@
       <tr>
         <th scope="row" class="s">S</th>
         <td>
-          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="610" height="450"/>
+          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="550" height="auto"/>
         </td>
         <td>
-          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="610" height="450"/>
+          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="550" height="auto"/>
         </td>
         <td>
-          <img src="monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="610" height="450"/>
+          <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="550" height="auto"/>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row" class="b">B</th>
+        <td>
+          <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="550" height="auto"/>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row" class="c">C</th>
+      </tr>
+      <tr>
+        <th scope="row" class="d">D</th>
+      </tr>
+      <tr>
+        <th scope="row" class="f">F (didn't ride) </th>
+        <td>
+          <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="550" height="auto"/>
+        </td>
+        <td>
+          <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="550" height="auto"/>
+        </td>
+        <td>
+          <img src="assets/fyre-drill.png" alt="Fyre Drill" width="550" height="auto"/>
         </td>
       </tr>
     </tbody>
-    <!-- Add a table body. -->
-    <!-- Inside tbody create 6 table rows -->
-    <!-- Give each row a th with scope of row and an id. Text is S,A,B,C,D,F -->
-    <!-- Below the th create table data containing an image. Repeat for every row. -->
-    
     <!-- Create a table foot -->
     <!-- In tfoot create a tr. Inside add <td colspan="4">Copyright yourname year</td>-->
   </body>
