--- a/index.html
+++ b/index.html
@@ -19,37 +19,55 @@
       <tr>
         <th scope="row" class="s">S</th>
         <td>
-          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="550" height="auto"/>
+          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="430" height="auto"/>
         </td>
         <td>
-          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="550" height="auto"/>
+          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="430" height="auto"/>
         </td>
         <td>
-          <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="550" height="auto"/>
+          <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="430" height="auto"/>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row" class="a">A</th>
+        <td>
+          <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="430" height="auto"/>
         </td>
       </tr>
       <tr>
         <th scope="row" class="b">B</th>
         <td>
-          <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="550" height="auto"/>
+          <img src="assets/untainable-dragon.png" alt="The Untainable Dragon" width="430" height="auto"/>
         </td>
       </tr>
       <tr>
         <th scope="row" class="c">C</th>
+        <td>
+          <img src="assets/werewolf.png" alt="Curse of the Werewolf" width="430" height="auto"/>
+        </td>
+        <td>
+          <img src="assets/mario-kart.png" alt="Mario Kart: Bowsers Challenge" width="430" height="auto"/>
+        </td>
+        <td>
+          <img src="assets/yoshi.png" alt="Yoshi's Adventure" width="430" height="auto"/>
+        </td>
       </tr>
       <tr>
         <th scope="row" class="d">D</th>
+        <td>
+          <img src="assets/carousel.png" alt="Constellation Carousel" width="430" height="auto"/>
+        </td>
       </tr>
       <tr>
-        <th scope="row" class="f">F (didn't ride) </th>
+        <th scope="row" class="f">F (didn't ride)</th>
         <td>
-          <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="550" height="auto"/>
+          <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="430" height="auto"/>
         </td>
         <td>
-          <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="550" height="auto"/>
+          <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="430" height="auto"/>
         </td>
         <td>
-          <img src="assets/fyre-drill.png" alt="Fyre Drill" width="550" height="auto"/>
+          <img src="assets/fyre-drill.png" alt="Fyre Drill" width="430" height="auto"/>
         </td>
       </tr>
     </tbody>
