--- a/index.html
+++ b/index.html
@@ -1,77 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
+   <head>
       <link href="style.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <table>
-      <caption>All Rides and Shows at Universal Florida's <i>Epic Universe</i> Ranked</caption>
-      <thead>
-        <tr>
-          <th scope="col"></th>
-          <th scope="col">Attraction 1</th>
-          <th scope="col">Attraction 2</th>
-          <th scope="col">Attraction 3</th>
-        </tr>
-      </thead>
-    </table>
-    <tbody>
-      <tr>
-        <th scope="row" class="s">S</th>
-        <td>
-          <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/stardust-racers.png" alt="Stardust Racers" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="430" height="auto"/>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row" class="a">A</th>
-        <td>
-          <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="430" height="auto"/>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row" class="b">B</th>
-        <td>
-          <img src="assets/untainable-dragon.png" alt="The Untainable Dragon" width="430" height="auto"/>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row" class="c">C</th>
-        <td>
-          <img src="assets/werewolf.png" alt="Curse of the Werewolf" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/mario-kart.png" alt="Mario Kart: Bowsers Challenge" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/yoshi.png" alt="Yoshi's Adventure" width="430" height="auto"/>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row" class="d">D</th>
-        <td>
-          <img src="assets/carousel.png" alt="Constellation Carousel" width="430" height="auto"/>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row" class="f">F (didn't ride)</th>
-        <td>
-          <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="430" height="auto"/>
-        </td>
-        <td>
-          <img src="assets/fyre-drill.png" alt="Fyre Drill" width="430" height="auto"/>
-        </td>
-      </tr>
-    </tbody>
-    <!-- Create a table foot -->
-    <!-- In tfoot create a tr. Inside add <td colspan="4">Copyright yourname year</td>-->
-  </body>
+   </head>
+   <body>
+      <table>
+         <caption>All Rides and Shows at Universal Florida's <i>Epic Universe</i> Ranked</caption>
+         <thead>
+            <tr>
+               <th scope="col"></th>
+               <th scope="col">Attraction 1</th>
+               <th scope="col">Attraction 2</th>
+               <th scope="col">Attraction 3</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <th scope="row" class="s">S</th>
+               <td>
+                  <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/stardust-racers.png" alt="Stardust Racers" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="430" height="auto"/>
+               </td>
+            </tr>
+            <tr>
+               <th scope="row" class="a">A</th>
+               <td>
+                  <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="430" height="auto"/>
+               </td>
+            </tr>
+            <tr>
+               <th scope="row" class="b">B</th>
+               <td>
+                  <img src="assets/le-cirque-arcanus.png" alt="Le Cirque Arcanus" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/untainable-dragon.png" alt="The Untainable Dragon" width="430" height="auto"/>
+               </td>
+            </tr>
+            <tr>
+               <th scope="row" class="c">C</th>
+               <td>
+                  <img src="assets/werewolf.png" alt="Curse of the Werewolf" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/mario-kart.png" alt="Mario Kart: Bowsers Challenge" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/yoshi.png" alt="Yoshi's Adventure" width="430" height="auto"/>
+               </td>
+            </tr>
+            <tr>
+               <th scope="row" class="d">D</th>
+               <td>
+                  <img src="assets/carousel.png" alt="Constellation Carousel" width="430" height="auto"/>
+               </td>
+            </tr>
+            <tr>
+               <th scope="row" class="f">F (didn't ride)</th>
+               <td>
+                  <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="430" height="auto"/>
+               </td>
+               <td>
+                  <img src="assets/fyre-drill.png" alt="Fyre Drill" width="430" height="auto"/>
+               </td>
+            </tr>
+         </tbody>
+         <tfoot>
+            <tr>
+               <td colspan="4">Copywrite Kristian Martinez 2025</td>
+            </tr>
+         </tfoot>
+      </table>
+   </body>
 </html>
