adjusted size of pictures again

--- a/index.html
+++ b/index.html
@@ -18,58 +18,58 @@
             <tr>
                <th scope="row" class="s">S</th>
                <td>
-                  <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="610" height="450"/>
+                  <img src="assets/ministry-of-magic.png" alt="Harry Potter and the Battle at the Ministry" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/stardust-racers.png" alt="Stardust Racers" width="610" height="450"/>
+                  <img src="assets/stardust-racers.png" alt="Stardust Racers" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="610" height="450"/>
+                  <img src="assets/monsters-unchained.png" alt="Monsters Unchained: The Frankenstein Experiment" width="200%" height="auto"/>
                </td>
             </tr>
             <tr>
                <th scope="row" class="a">A</th>
                <td>
-                  <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="610" height="450"/>
+                  <img src="assets/hiccups-wing-gliders.png" alt="Hiccups Wing Gliders" width="200%" height="auto"/>
                </td>
             </tr>
             <tr>
                <th scope="row" class="b">B</th>
                <td>
-                  <img src="assets/le-cirque-arcanus.png" alt="Le Cirque Arcanus" width="610" height="450"/>
+                  <img src="assets/le-cirque-arcanus.png" alt="Le Cirque Arcanus" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/untainable-dragon.png" alt="The Untainable Dragon" width="610" height="450"/>
+                  <img src="assets/untainable-dragon.png" alt="The Untainable Dragon" width="200%" height="auto"/>
                </td>
             </tr>
             <tr>
                <th scope="row" class="c">C</th>
                <td>
-                  <img src="assets/werewolf.png" alt="Curse of the Werewolf" width="610" height="450"/>
+                  <img src="assets/werewolf.png" alt="Curse of the Werewolf" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/mario-kart.png" alt="Mario Kart: Bowsers Challenge" width="610" height="450"/>
+                  <img src="assets/mario-kart.png" alt="Mario Kart: Bowsers Challenge" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/yoshi.png" alt="Yoshi's Adventure" width="610" height="450"/>
+                  <img src="assets/yoshi.png" alt="Yoshi's Adventure" width="200%" height="auto"/>
                </td>
             </tr>
             <tr>
                <th scope="row" class="d">D</th>
                <td>
-                  <img src="assets/carousel.png" alt="Constellation Carousel" width="610" height="450"/>
+                  <img src="assets/carousel.png" alt="Constellation Carousel" width="200%" height="auto"/>
                </td>
             </tr>
             <tr>
                <th scope="row" class="f">F (didn't ride)</th>
                <td>
-                  <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="610" height="450"/>
+                  <img src="assets/donkey-kong.png" alt="Mine-Cart Madness" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="610" height="450"/>
+                  <img src="assets/dragon-racers-rally.png" alt="Dragon Racer's Rally" width="200%" height="auto"/>
                </td>
                <td>
-                  <img src="assets/fyre-drill.png" alt="Fyre Drill" width="610" height="450"/>
+                  <img src="assets/fyre-drill.png" alt="Fyre Drill" width="200%" height="auto"/>
                </td>
             </tr>
          </tbody>
